# entviz-rs

./: .gitignore  3wew.md  62iz.md  6cvy.md  AGENTS.md  Cargo.toml  NOTICE  README.md  SECURITY.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  copilot-review-gate.yml  release.yml
reviews/: devops-engineer-port-review-2026-06-19.md  maintainability-expert-port-review-2026-06-19.md  perception-reviewer-port-review-2026-06-19.md  review-panel-port-review-2026-06-19.md  security-hawk-port-review-2026-06-19.md  spec-conformance-auditor-port-review-2026-06-19.md  testability-hawk-port-review-2026-06-19.md
scripts/: release.py  setup-branch-protection.sh
src/: characterize.rs  entropy.rs  keccak.rs  lib.rs  main.rs  model.rs  pipeline.rs  util.rs
tests/: cli.rs  conformance.rs  palette_cvd.rs
