[package]
name = "entviz"
version = "0.1.0"
edition = "2021"
description = "Visualize high-entropy values as comparable SVG diagrams (entviz, spec v10)."
license = "MIT"
repository = "https://github.com/dhh1128/entviz-rs"
keywords = ["entropy", "fingerprint", "svg", "visualization"]
categories = ["visualization", "cryptography"]

[dependencies]
sha2 = "0.10"        # SHA-512 fingerprint
base64 = "0.22"      # base64url (no pad) for ftok tokenization
hex = "0.4"          # digest hex for the clip-path salt + middle cells
serde_json = "1"     # render-model bin: emit the golden model.json schema

[[bin]]
name = "entviz-conformance"
path = "src/main.rs"

# Differential oracle for the adversarial grinder: read a parse-extracted
# request (core, fingerprint_core, alphabet, geometry) as JSON on stdin, print
# the render model as JSON matching the Python golden model.json schema.
[[bin]]
name = "entviz-render-model"
path = "src/bin/render_model.rs"

[lib]
name = "entviz"
path = "src/lib.rs"
